--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@tensorflow-models/mobilenet": "^2.1.1",
-    "@tensorflow/tfjs": "^4.17.0",
+    "@tensorflow/tfjs": "^4.20.0",
     "@tensorflow/tfjs-react-native": "^1.0.0",
     "@types/react-native-canvas": "^0.1.13",
-    "expo": "~50.0.6",
-    "expo-camera": "^14.0.4",
-    "expo-file-system": "^16.0.6",
-    "expo-gl": "^13.6.0",
+    "expo": "^51.0.21",
+    "expo-camera": "^15.0.14",
+    "expo-file-system": "^17.0.1",
+    "expo-gl": "^14.0.2",
     "expo-gl-cpp": "^11.4.0",
     "expo-permissions": "^14.4.0",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.74.3",
     "react-native-canvas": "^0.1.39",
     "react-native-fs": "^2.20.0",
-    "react-native-webview": "^13.8.1"
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.7"
   },
   "private": true
 }
